--- a/src/components/pages/Main/Posts/Post/Post.module.css
+++ b/src/components/pages/Main/Posts/Post/Post.module.css
@@ -6,14 +6,14 @@
 	margin-bottom: 15px;
 	background-size: cover;
 	width: 30%;
-	height: 150px;
+	height: auto;
 	overflow: hidden;
 
 }
 
 .postImage{
 width: 100%;
-height: 100%;
+height: auto;
 	
 }
 
